--- a/src/main/resources/templates/interviewboard/list.html
+++ b/src/main/resources/templates/interviewboard/list.html
@@ -32,8 +32,8 @@
       </td>
       <td th:text="${notice.authorName}">작성자</td>
       <!-- updateAt이 null 이 아니면 updateAt 표시 -->
-      <td th:if="${notice.updatedAt != null}" th:text="${notice.updatedAt}">작성일</td>
-      <td th:unless="${notice.updatedAt != null}" th:text="${notice.createdAt}">작성일</td>
+      <td th:if="${notice.updatedAt != null}" th:text="${#temporals.format(notice.updatedAt, 'YY.MM.dd')}">작성일</td>
+      <td th:unless="${notice.updatedAt != null}" th:text="${#temporals.format(notice.createdAt, 'YY.MM.dd')}">작성일</td>
     </tr>
     <tr th:each="interview:${interviewBoards}" class="post-item board-item">
       <td>
@@ -42,8 +42,8 @@
       </td>
       <td th:text="${interview.authorName}">작성자</td>
       <!-- updateAt이 null 이 아니면 updateAt 표시 -->
-      <td th:if="${interview.updatedAt != null}" th:text="${interview.updatedAt}">작성일</td>
-      <td th:unless="${interview.updatedAt != null}" th:text="${interview.createdAt}">작성일</td>
+      <td th:if="${interview.updatedAt != null}" th:text="${#temporals.format(interview.updatedAt, 'YY.MM.dd')}">작성일</td>
+      <td th:unless="${interview.updatedAt != null}" th:text="${#temporals.format(interview.createdAt, 'YY.MM.dd')}">작성일</td>
     </tr>
     </tbody>
   </table>
