--- a/src/main/resources/templates/notice/list.html
+++ b/src/main/resources/templates/notice/list.html
@@ -35,8 +35,8 @@
       </td>
       <td th:text="${notice.authorName}">작성자</td>
       <!-- updateAt이 null 이 아니면 updateAt 표시 -->
-      <td th:if="${notice.updatedAt != null}" th:text="${notice.updatedAt}">작성일</td>
-      <td th:unless="${notice.updatedAt != null}" th:text="${notice.createdAt}">작성일</td>
+      <td th:if="${notice.updatedAt != null}" th:text="${#temporals.format(notice.updatedAt, 'YY.MM.dd')}">작성일</td>
+      <td th:unless="${notice.updatedAt != null}" th:text="${#temporals.format(notice.createdAt, 'YY.MM.dd')}">작성일</td>
     </tr>
     </tbody>
   </table>
