--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,7 +10,7 @@
 <header>
   <div class="logo-container">
     <a th:href="@{/fashionlog}" class="logo">
-      <img src="#" alt="Logo" class="logo-image">
+      <img src="/img/hynss-logo.png" alt="Logo" class="logo-image">
     </a>
   </div>
 </header>
