--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -11,7 +11,7 @@ body, html {
   grid-template-rows: auto auto auto auto;
   gap: 10px;
   padding: 10px;
-  height: calc(100vh - 60px); /* Adjust based on your header height */
+  height: calc(100vh - 60px); /* 헤더 높이에 따라 조정 */
 }
 
 .main-content a {
@@ -23,16 +23,50 @@ body, html {
   font-weight: bold;
   text-decoration: none;
   background-color: #808080;
-  padding: 40px;
+  padding: 10px;
   border-radius: 8px;
+  overflow: hidden;
+  position: relative;
 }
 
-#notice { grid-area: 1 / 1 / 2 / 2; }
-#freetalk { grid-area: 1 / 2 / 2 / 3; }
-#buysell { grid-area: 2 / 1 / 3 / 3; }
-#lookbook { grid-area: 3 / 1 / 4 / 3; }
-#interview { grid-area: 4 / 1 / 5 / 3; }
-#dailylook { grid-area: 5 / 1 / 6 / 3; }
+.main-content a img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.main-content a span {
+  position: relative;
+  z-index: 1;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+#notice {
+  grid-area: 1 / 1 / 2 / 2;
+}
+
+#freetalk {
+  grid-area: 1 / 2 / 2 / 3;
+}
+
+#buysell {
+  grid-area: 2 / 1 / 3 / 3;
+}
+
+#lookbook {
+  grid-area: 3 / 1 / 4 / 3;
+}
+
+#interview {
+  grid-area: 4 / 1 / 5 / 3;
+}
+
+#dailylook {
+  grid-area: 5 / 1 / 6 / 3;
+}
 
 @media (max-width: 768px) {
   .main-content {
