--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,6 +5,7 @@
   <title>로그인</title>
   <link rel="stylesheet" th:href="@{/css/login.css}">
   <link rel="stylesheet" th:href="@{/css/styles.css}">
+  <link rel="stylesheet" href="../static/css/home.css">
 </head>
 <body>
 <header>
